--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 </head>
 
 <body>
-    <header class="container-fluid py-2 shadow-lg">
+    <header class="container-fluid py-2 shadow-lg position-sticky top-0">
          <div class="container">
-            <div class="row">
-                <figure class="col-lg-6 mb-0 pb-0">
-                    <img src="asset/logo.png" class="w-40">
+            <div class="row align-items-center ">
+                <figure class="col-lg-6 col-12 text-lg-start text-center mb-0 pb-0">
+                    <img src="asset/logo.png" class="w-xl-40 w-lg-40 w-md-40 w-40">
                 </figure>
                 <div class="col-lg-6">
-                    <button>Chat With Us</button>
+                    <div class="btn-outer d-flex justify-content-end gap-3">
+                        <button class="btn whatsppbtn"><i class="fa-brands fa-whatsapp"></i> Chat With Us</button>
+                        <button class="btn call"><i class="fa-solid fa-phone"></i> Call Us</button>
+                    </div>
                 </div>
             </div>
          </div>
