--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 
 <body>
-    <header class="container-fluid py-2 shadow-lg position-sticky top-0">
-         <div class="container">
+    <header class="container-fluid bg-white py-2 shadow-lg position-sticky top-0 z-1">
+        <!-- nav section start -->
+        <div class="container">
             <div class="row align-items-center ">
                 <figure class="col-lg-6 col-12 text-lg-start text-center mb-0 pb-0">
                     <img src="asset/logo.png" class="w-xl-40 w-lg-40 w-md-40 w-40">
@@ -26,10 +27,72 @@
                     </div>
                 </div>
             </div>
-         </div>
-
+        </div>
+        <!-- nav section end -->
     </header>
-    <main></main>
+    <main>
+        <!-- banner section start -->
+        <section class="container-fluid py-lg-5 py-sm-4 py-3 ">
+            <div class="container">
+                <div class="row gap-3 justify-content-between align-items-center">
+                    <div class="col-lg-6">
+                        <div class="bannerContent">
+                            <h1>A Legacy of <span>Knowledge & Growth</span></h1>
+                            <p>Providing quality education and a strong foundation for generations of students,
+                                Baratipur Model High School is committed to fostering academic excellence, ethical
+                                values, and holistic development. Our dedicated faculty, modern facilities, and
+                                student-centered approach ensure that every learner thrives both inside and outside the
+                                classroom. From rigorous academics to extracurricular opportunities, we prepare our
+                                students to meet the challenges of tomorrow with confidence and integrity.</p>
+                            <ul>
+                                <li>Excellence in academics and skill development</li>
+                                <li>Experienced and passionate teaching staff</li>
+                                <li>Vibrant extracurricular programs and clubs</li>
+                                <li>Safe, supportive, and inclusive learning environment</li>
+                                <li>Preparing students for higher education and future success</li>
+                            </ul>
+                            <button class="btn  btn-outline-info">Learn More About Us</button>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 container position-relative">
+                        <figure>
+                            <img src="asset/banner.png" class="banner-w-lg">
+                        </figure>
+                        <div class="sohel d-flex justify-content-center align-items-center position-absolute shadow-lg">
+                            <h3>sujadddoula sohel</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container shadow-lg mt-5 counterSection">
+                <div class="row row-cols-lg-5 row-cols-md-3 row-cols-2 p-4 text-center">
+                    <div class="col">
+                        <h2>1200+</h2>
+                        <p>Active Learners</p>
+                    </div>
+                    <div class="col">
+                        <h2>60+</h2>
+                        <p>Experienced Faculty</p>
+                    </div>
+                    <div class="col">
+                        <h2>15+</h2>
+                        <p>Modern Classrooms</p>
+                    </div>
+                    <div class="col">
+                        <h2>30+</h2>
+                        <p>Sports & Cultural Events</p>
+                    </div>
+                    <div class="col">
+                        <h2>95%</h2>
+                        <p>Exam Success Rate</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- banner section end -->
+    </main>
     <footer></footer>
 
 
