--- a/index.html
+++ b/index.html
@@ -31,6 +31,43 @@
         <!-- nav section end -->
     </header>
     <main>
+
+
+        <!-- Login modal start -->
+
+        <div class="modal fade" id="loginModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-8" id="exampleModalLabel">Login Now</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="" class="LoginForm">
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1">
+                            </div>
+                            <div class="mb-3 form-check">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Sign In</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Login modal end -->
+
         <!-- banner section start -->
         <section class="container-fluid py-lg-5 py-sm-4 py-3 ">
             <div class="container">
@@ -51,7 +88,8 @@
                                 <li>Safe, supportive, and inclusive learning environment</li>
                                 <li>Preparing students for higher education and future success</li>
                             </ul>
-                            <button class="btn  btn-outline-info">Learn More About Us</button>
+                            <button class="btn  btn-outline-info" data-bs-toggle="modal"
+                                data-bs-target="#loginModal">Learn More About Us</button>
                         </div>
                     </div>
                     <div class="col-lg-5 container position-relative">
@@ -64,7 +102,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="container shadow-lg mt-5 counterSection">
                 <div class="row row-cols-lg-5 row-cols-md-3 row-cols-2 p-4 text-center">
                     <div class="col">
@@ -89,7 +126,6 @@
                     </div>
                 </div>
             </div>
-
         </section>
         <!-- banner section end -->
     </main>
