add future section

--- a/index.html
+++ b/index.html
@@ -128,6 +128,97 @@
             </div>
         </section>
         <!-- banner section end -->
+
+
+        <!-- Highlights section start  -->
+
+        <div class="highlights-section container-fluid py-5 bg-light">
+            <div class="container">
+                <div class="row mb-4">
+                    <div class="col-12">
+                        <h2 class="fw-bold">Why Choose Baratipur Model High School?</h2>
+                        <p class="text-muted">We are committed to providing quality education, modern
+                            facilities, and a supportive environment for every student.</p>
+                    </div>
+                </div>
+                <div class="row g-4">
+                    <!-- Card 1 -->
+                    <div class="col-lg-4 col-sm-6 col-12">
+                        <div class="bg-white p-3 d-flex shadow-sm rounded align-items-center">
+                            <div
+                                class="icon-box bg-primary rounded me-3 d-flex justify-content-center align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 640 640">
+                                    <path
+                                        d="M480 576L192 576C139 576 96 533 96 480L96 160C96 107 139 64 192 64L496 64C522.5 64 544 85.5 544 112L544 400C544 420.9 530.6 438.7 512 445.3L512 512C529.7 512 544 526.3 544 544C544 561.7 529.7 576 512 576L480 576zM192 448C174.3 448 160 462.3 160 480C160 497.7 174.3 512 192 512L448 512L448 448L192 448zM224 216C224 229.3 234.7 240 248 240L424 240C437.3 240 448 229.3 448 216C448 202.7 437.3 192 424 192L248 192C234.7 192 224 202.7 224 216zM248 288C234.7 288 224 298.7 224 312C224 325.3 234.7 336 248 336L424 336C437.3 336 448 325.3 448 312C448 298.7 437.3 288 424 288L248 288z" />
+                                </svg>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold">Quality Education</h5>
+                                <p>Modern curriculum and expert teachers.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 2 -->
+                    <div class="col-lg-4 col-sm-6 col-12">
+                        <div class="bg-white p-3 d-flex shadow-sm rounded align-items-center">
+                            <div
+                                class="icon-box bg-success rounded me-3 d-flex justify-content-center align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 640 640">
+                                    <path
+                                        d="M240 64C213.5 64 192 85.5 192 112L192 320C192 346.5 213.5 368 240 368L304 368C330.5 368 352 346.5 352 320L352 256L384 256C454.7 256 512 313.3 512 384C512 454.7 454.7 512 384 512L96 512C78.3 512 64 526.3 64 544C64 561.7 78.3 576 96 576L544 576C561.7 576 576 561.7 576 544C576 526.3 561.7 512 544 512L527.1 512C557.5 478 576 433.2 576 384C576 278 490 192 384 192L352 192L352 112C352 85.5 330.5 64 304 64L240 64zM184 416C170.7 416 160 426.7 160 440C160 453.3 170.7 464 184 464L360 464C373.3 464 384 453.3 384 440C384 426.7 373.3 416 360 416L184 416z" />
+                                </svg>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold">Assignments & Tests</h5>
+                                <p>Step-by-step learning checks.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div class="col-lg-4 col-sm-6 col-12">
+                        <div class="bg-white p-3 d-flex shadow-sm rounded align-items-center">
+                            <div
+                                class="icon-box bg-warning rounded me-3 d-flex justify-content-center align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 640 640">
+                                    <path
+                                        d="M576 322.9C552.6 330.9 528.2 336 503.4 338C509.3 239.4 472.7 146.9 408.5 79.7C506.3 115.7 576 209.7 576 320C576 321 576 321.9 576 322.9zM570.1 374.9C564.9 398.6 556.5 421.1 545.2 441.8C450.5 494 331.2 491.8 236.8 428.2C258.5 396.9 286.6 369.3 320.6 347.7C400.1 389.3 489.1 396.8 570.1 374.8zM343.7 305.6C340 215.9 302 135.1 242.4 75.9C264.7 68.8 288.4 64.7 312.9 64C405.4 119.9 463.2 224.3 455.3 337.8C417.3 334.6 379.4 324.1 343.7 305.5zM194.5 96.8C213.1 113.1 229.8 131.7 243.9 152.2C155.5 196.3 93.7 274.3 67.7 363.5C65.3 349.3 64 334.8 64 320C64 224.2 116.6 140.7 194.5 96.8zM267.9 193.8C284.2 228.3 294 266.4 295.8 306.6C220 354.6 169 427.9 147.5 509.1C129.9 493 114.5 474.5 102 454.1C104.1 346 165.7 243.7 267.9 193.8zM320 576C272.3 576 227.7 563 189.5 540.3C194.3 516 202.1 492.3 212.7 469.9C295.1 524.3 393.5 538.8 483.7 516.9C439.3 553.9 382.2 576.1 320 576.1z" />
+                                </svg>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold">Sports & Activities</h5>
+                                <p>Creative & physical growth.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 4 -->
+                    <div class="col-lg-4 col-sm-6 col-12">
+                        <div class="bg-white p-3 d-flex shadow-sm rounded align-items-center">
+                            <div
+                                class="icon-box bg-danger rounded me-3 d-flex justify-content-center align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 640 640">
+                                    <path
+                                        d="M481.3 424.1L409.7 419.3C404.5 419 399.4 420.4 395.2 423.5C391 426.6 388 430.9 386.8 436L369.2 505.6C353.5 509.8 337 512 320 512C303 512 286.5 509.8 270.8 505.6L253.2 436C251.9 431 248.9 426.6 244.8 423.5C240.7 420.4 235.5 419 230.3 419.3L158.7 424.1C141.1 396.9 130.2 364.9 128.3 330.5L189 292.3C193.4 289.5 196.6 285.3 198.2 280.4C199.8 275.5 199.6 270.2 197.7 265.4L171 198.8C192 173.2 219.3 153 250.7 140.9L305.9 186.9C309.9 190.2 314.9 192 320 192C325.1 192 330.2 190.2 334.1 186.9L389.3 140.9C420.6 153 448 173.2 468.9 198.8L442.2 265.4C440.3 270.2 440.1 275.5 441.7 280.4C443.3 285.3 446.6 289.5 450.9 292.3L511.6 330.5C509.7 364.9 498.8 396.9 481.2 424.1zM320 576C461.4 576 576 461.4 576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 461.4 178.6 576 320 576zM334.1 250.3C325.7 244.2 314.3 244.2 305.9 250.3L258 285C249.6 291.1 246.1 301.9 249.3 311.8L267.6 368.1C270.8 378 280 384.7 290.4 384.7L349.6 384.7C360 384.7 369.2 378 372.4 368.1L390.7 311.8C393.9 301.9 390.4 291.1 382 285L334.1 250.2z" />
+                                </svg>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold">Future-Ready</h5>
+                                <p>Confidence & leadership skills.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+        </div>
+        </div>
+
+        <!-- Highlights section end -->
     </main>
     <footer></footer>
 
