--- a/index.html
+++ b/index.html
@@ -15,24 +15,84 @@
 <body>
     <header class="container-fluid bg-white py-2 shadow-lg position-sticky top-0 z-1">
         <!-- nav section start -->
-        <div class="container">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#mobileMenu" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <figure class="mt-sm-2 mb-0 pb-0 d-flex justify-content-sm-end">
+                        <a href="#"> <img src="asset/logo.png" class="w-xl-40 w-lg-40 w-md-40 w-40"></a>
+                    </figure>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="mobileMenu" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header">
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <figure class="mb-0 pb-0">
+                        <a href="#"> <img src="asset/logo.png" class="w-xl-40 w-lg-40 w-md-40 w-40"></a>
+                    </figure>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+            </div>
+        </div>
+
+
+
+
+
+
+
+        <!-- <div class="container">
             <div class="row align-items-center ">
-                <figure class="col-lg-6 col-12 text-lg-start text-center mb-0 pb-0">
-                    <img src="asset/logo.png" class="w-xl-40 w-lg-40 w-md-40 w-40">
+        <figure class="col-lg-6 col-12 text-lg-start text-center mb-0 pb-0">
+                    <a href="#"> <img src="asset/logo.png" class="w-xl-40 w-lg-40 w-md-40 w-40"></a>
                 </figure>
-                <div class="col-lg-6">
+1                <div class="col-lg-6">
                     <div class="btn-outer d-flex justify-content-end gap-3">
                         <button class="btn whatsppbtn"><i class="fa-brands fa-whatsapp"></i> Chat With Us</button>
                         <button class="btn call"><i class="fa-solid fa-phone"></i> Call Us</button>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- nav section end -->
     </header>
     <main>
-
-
         <!-- Login modal start -->
 
         <div class="modal fade" id="loginModal">
@@ -209,15 +269,44 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Card 5 -->
+                    <div class="col-lg-4 col-sm-6 col-12">
+                        <div class="bg-white p-3 d-flex shadow-sm rounded align-items-center">
+                            <div class="icon-box bg-info rounded me-3 d-flex justify-content-center align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 640 640">
+                                    <path
+                                        d="M320 64C167.6 64 64 167.6 64 320C64 472.4 167.6 576 320 576C472.4 576 576 472.4 576 320C576 167.6 472.4 64 320 64zM320 512C202.1 512 128 437.9 128 320C128 202.1 202.1 128 320 128C437.9 128 512 202.1 512 320C512 437.9 437.9 512 320 512zM288 192L288 352 416 416 432 384 320 336 320 192 288 192z" />
+                                </svg>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold">Time Management</h5>
+                                <p>Discipline & punctuality in learning.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 6 -->
+                    <div class="col-lg-4 col-sm-6 col-12">
+                        <div class="bg-white p-3 d-flex shadow-sm rounded align-items-center">
+                            <div
+                                class="icon-box bg-secondary rounded me-3 d-flex justify-content-center align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 640 640">
+                                    <path
+                                        d="M320 32C229.2 32 160 101.2 160 192C160 248.6 192.5 298.4 240 322.6L240 368 128 448 128 512 512 512 512 448 400 368 400 322.6C447.5 298.4 480 248.6 480 192 480 101.2 410.8 32 320 32zM320 256C284.7 256 256 227.3 256 192 256 156.7 284.7 128 320 128 355.3 128 384 156.7 384 192 384 227.3 355.3 256 320 256z" />
+                                </svg>
+                            </div>
+                            <div>
+                                <h5 class="fw-bold">Safe Environment</h5>
+                                <p>Secure & supportive campus for all.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-
             </div>
         </div>
-
         </div>
         </div>
-
         <!-- Highlights section end -->
     </main>
     <footer></footer>
