adde gallery section

--- a/index.html
+++ b/index.html
@@ -354,7 +354,46 @@
             </div>
         </section>
         <!-- ==================== HERO CAROUSEL END ==================== -->
-         
+        <!-- ==================== OUR GALLERY ==================== -->
+        <section class="hero container-fluid my-5">
+            <div class="container">
+                <div class="row justify-content-center mb-4">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="fw-bold" data-aos="zoom-in" data-aos-duration="1500">School Gallery</h2>
+                        <p class="lead-muted">Our well-structured curriculum is designed to nurture academic excellence,
+                            creativity, and personal growth in every student.</p>
+                    </div>
+                </div>
+
+                <div class="gallery-grid" data-aos="fade-up" data-aos-duration="1200">
+                    <div class="gallery-item"><img src="asset/gallery/g1.jpg" alt="Gallery 1"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g2.jpg" alt="Gallery 2"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g3.jpg" alt="Gallery 3"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g4.jpg" alt="Gallery 4"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g5.jpg" alt="Gallery 5"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g6.jpg" alt="Gallery 6"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g7.jpg" alt="Gallery 7"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g8.jpg" alt="Gallery 8"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g9.jpg" alt="Gallery 8"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g10.jpg" alt="Gallery 8"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g11.jpg" alt="Gallery 8"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g12.jpg" alt="Gallery 8"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g13.jpg" alt="Gallery 8"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g14.jpg" alt="Gallery 8"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g15.jpg" alt="Gallery 8"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g16.jpg" alt="Gallery 8"></div>
+                    <div class="gallery-item"><img src="asset/gallery/g17.jpg" alt="Gallery 8"></div>
+                </div>
+
+
+                <div class="text-center mt-4">
+                    <button class="btn btn-dark px-4">Show More</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- ==================== OUR GALLERY END ==================== -->
+
 
         <!-- ==================== HIGHLIGHTS ==================== -->
         <div class="highlights-section container-fluid py-5 bg-light">
