adde Excellence After SSC section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
                         aria-label="Slide 3"></button>
                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3"
                         aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item banner-bg active" data-bs-interval="10000">
@@ -126,6 +128,13 @@
                         </div>
                     </div>
                     <div class="carousel-item banner-bg3">
+                        <div class="carousel-caption d-none d-md-block text-start" data-aos="fade-up"
+                            data-aos-duration="2000">
+                            <h1 class="text-white">Love for Model School</h1>
+                            <p class="text-white">Together we grow, learn, and succeed.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item banner-bg4">
                         <div class="carousel-caption d-none d-md-block text-start" data-aos="fade-up"
                             data-aos-duration="2000">
                             <h1 class="text-white">Love for Model School</h1>
@@ -354,6 +363,8 @@
             </div>
         </section>
         <!-- ==================== HERO CAROUSEL END ==================== -->
+
+
         <!-- ==================== OUR GALLERY ==================== -->
         <section class="hero container-fluid my-5">
             <div class="container">
@@ -394,7 +405,114 @@
 
         <!-- ==================== OUR GALLERY END ==================== -->
 
+        <section class="container-fluid my-5">
+            <div class="container"  data-aos="fade-up" data-aos-duration="1200">
+                <div class="row justify-content-center mb-">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="fw-semibold mb-2" data-aos="zoom-in" data-aos-duration="1500">Excellence After SSC
+                        </h2>
+                        <h1 class="fw-semibold mb-2">Success Stories that Make Us Proud</h1>
+                        <p class="lead-muted">Our alumni have made remarkable strides in various fields after completing
+                            their SSC. From pursuing higher education in prestigious institutions to excelling in their
+                            careers, they continue to inspire current students with their dedication, hard work,
+                            and achievements</p>
+                    </div>
+                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-3">
+                        <div class="col">
+                            <div class="card h-100 shadow-lg">
+                                <img src="asset/img_avatar.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Name</h5>
+                                    <p class="card-text">Some quick example text to build on the card title.</p>
+                                    <a href="#" class="btn btn-primary">More Info</a>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="col">
+                            <div class="card h-100 shadow-lg">
+                                <img src="asset/img_avatar2.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Name</h5>
+                                    <p class="card-text">Some quick example text to build on the card title.</p>
+                                    <a href="#" class="btn btn-primary">More Info</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100 shadow-lg">
+                                <img src="asset/img_avatar.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Name</h5>
+                                    <p class="card-text">Some quick example text to build on the card title.</p>
+                                    <a href="#" class="btn btn-primary">More Info</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card h-100 shadow-lg">
+                                <img src="asset/img_avatar2.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Name</h5>
+                                    <p class="card-text">Some quick example text to build on the card title.</p>
+                                    <a href="#" class="btn btn-primary">More Info</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100 shadow-lg">
+                                <img src="asset/img_avatar.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Name</h5>
+                                    <p class="card-text">Some quick example text to build on the card title.</p>
+                                    <a href="#" class="btn btn-primary">More Info</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card h-100 shadow-lg">
+                                <img src="asset/img_avatar2.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Name</h5>
+                                    <p class="card-text">Some quick example text to build on the card title.</p>
+                                    <a href="#" class="btn btn-primary">More Info</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100 shadow-lg">
+                                <img src="asset/img_avatar.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Name</h5>
+                                    <p class="card-text">Some quick example text to build on the card title.</p>
+                                    <a href="#" class="btn btn-primary">More Info</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card h-100 shadow-lg">
+                                <img src="asset/img_avatar2.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Name</h5>
+                                    <p class="card-text">Some quick example text to build on the card title.</p>
+                                    <a href="#" class="btn btn-primary">More Info</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Repeat more cards here -->
+                    </div>
+
+                </div>
+                 <div class="text-center mt-4">
+                    <button class="btn btn-primary px-4">Show More</button>
+                </div>
+
+            </div>
+        </section>
         <!-- ==================== HIGHLIGHTS ==================== -->
         <div class="highlights-section container-fluid py-5 bg-light">
             <div class="container">
@@ -523,7 +641,7 @@
                 <div class="row g-4">
                     <!-- Teacher Card Example -->
                     <div class="col-sm-6 col-md-4 col-lg-3" data-aos="flip-left" data-aos-duration="3000">
-                        <div class="card h-100 shadow-sm">
+                        <div class="card h-100 shadow-lg shadow-sm">
                             <div class="card-body text-right">
                                 <h5 class="card-title card-subtitle fw-semibold">Md. Ayub Ali Khandokhar</h5>
                                 <p class="card-text mb-1"><i class="fas fa-user-tie me-2"></i>Headmaster</p>
@@ -1058,9 +1176,9 @@
                 <!-- Contact Info -->
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold">Contact Us</h5>
-                    <p><i class="bi bi-geo-alt-fill me-2"></i> 123 School Road, Dhaka, Bangladesh</p>
+                    <p><i class="bi bi-geo-alt-fill me-2"></i> 86M5+R56, Ghoraghat, Bangladesh</p>
                     <p><i class="bi bi-envelope-fill me-2"></i> info@baratipurmodelhighschool.edu</p>
-                    <p><i class="bi bi-telephone-fill me-2"></i> +880 123 456 789</p>
+                    <p><i class="bi bi-telephone-fill me-2"></i> +880 1723 456 789</p>
 
                     <!-- Social Media -->
                     <div class="mt-3">
@@ -1074,7 +1192,7 @@
 
             <!-- Bottom Bar -->
             <div class="text-center pt-3 border-top border-light">
-                <p class="mb-0">&copy; 2025 Your School Name. All Rights Reserved.</p>
+                <p class="mb-0">&copy; 2025 Baratipur Model High School. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
