Fix: Remove duplicate AOS stylesheet and add missing section comments

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="style/bootstrap.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
@@ -404,6 +405,8 @@
         </section>
 
         <!-- ==================== OUR GALLERY END ==================== -->
+         
+        <!-- ==================== Excellence After SSC END ==================== -->
 
         <section class="container-fluid my-5">
             <div class="container"  data-aos="fade-up" data-aos-duration="1200">
@@ -513,6 +516,10 @@
 
             </div>
         </section>
+
+         <!-- ==================== Excellence After SSC END ==================== -->
+
+
         <!-- ==================== HIGHLIGHTS ==================== -->
         <div class="highlights-section container-fluid py-5 bg-light">
             <div class="container">
@@ -1175,7 +1182,7 @@
 
                 <!-- Contact Info -->
                 <div class="col-md-4 mb-4">
-                    <h5 class="fw-bold">Contact Us</h5>
+                    <h5 class="fw-bold" >Contact Us</h5>
                     <p><i class="bi bi-geo-alt-fill me-2"></i> 86M5+R56, Ghoraghat, Bangladesh</p>
                     <p><i class="bi bi-envelope-fill me-2"></i> info@baratipurmodelhighschool.edu</p>
                     <p><i class="bi bi-telephone-fill me-2"></i> +880 1723 456 789</p>
